# factorio-agent

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
.claude/projects/-home-holo-factorio-agent/memory/: feedback_use_uv.md
agent/: api_docs.py  bridge.py  loop.py  memory.py  rcon.py  review.py  run.py  scripts.py  server.py  tools.py
config/: factorio-agent.service.template  map-gen-settings.json  server-adminlist.json  server-settings.json
docs/: configuration.md  evolution-github.md  time_control.md
docs/auxiliary/: changelog-format.md  data-lifecycle.md  global.md  instrument.md  item-weight.md  json-docs-prototype.md  json-docs-runtime.md  libraries.md  migrations.md  mod-structure.md  noise-expressions.md  prototype-tree.md  storage.md
docs/plans/: 2026-03-31-script-hot-reload-design.md  2026-03-31-script-hot-reload-plan.md
memory/: agent_notes.md
mod/: control.lua  info.json
mod/scripts/: advance.lua  inspect.lua
mod/scripts/actions/: remove.lua  spawn.lua
mod/scripts/atomic/: mine_entity.lua
scripts/: e2e_test.py  parse_docs.py
tests/: test_api_docs.py  test_bridge.py  test_loop.py  test_memory.py  test_rcon.py  test_review.py  test_scripts.py  test_tools.py
