[project]
name = "factorio-agent"
version = "0.1.0"
description = "AI agent that autonomously completes tasks in Factorio and evolves its own toolset"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
