[project]
name = "factorio-agent"
version = "0.1.0"
description = "AI agent that autonomously completes tasks in Factorio and evolves its own toolset"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.86.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["agent*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
